--- a/Financeiro.Data/Financeiro.Data.csproj
+++ b/Financeiro.Data/Financeiro.Data.csproj
@@ -8,7 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.123" />
-    <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="7.0.4" />
+    <PackageReference Include="Microsoft.Data.Sqlite" Version="6.0.15" />
+    <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="6.0.15" />
   </ItemGroup>
 
 </Project>
